# blackwatch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  productbuild.xml  release.sh  repo.json
certs/: Application - All Star Apps - 768Z86F8ET.p12  Installer - All Star Apps - 768Z86F8ET.p12
cmake/: fetching_libs.cmake
gui-web/: .gitignore  README.md  build.js  index.html  package-lock.json  package.json  vite.config.ts
gui-web/src/: juce.ts  knob.vue  layout.less  led-display.vue  main.ts  reset.less  root.vue  types.ts
gui-web/src/gui/: fader.vue  gui.vue  juce.ts  knob.vue  layout.less  led-display.vue  meter.vue  midi-controller.ts  reset.less  root-auto-size.ts
gui-web/src/gui/libs/: ctxmenu.js  pubsub.js
gui-web/src/picker/: index.ts  picker.vue
gui-web/src/utils/: math.ts  timeout.ts
plugin/: CMakeLists.txt  pre-build.sh
plugin/include/BlackwatchStudios/: index.html
plugin/source/: AppSettings.cpp  AppSettings.h  Browser.h  BwLogger.cpp  BwLogger.h  BwRMS.cpp  BwRMS.h  IGuiModel.cpp  IGuiModel.h  MainAudio.cpp  MainAudio.h  MainGui.cpp  MainGui.h  MidiChangedEvent.cpp  MidiChangedEvent.h  MyMidiProcessor.cpp  MyMidiProcessor.h  MySynth.cpp  MySynth.h  PubSub.cpp  PubSub.h  Repo.cpp  Repo.h  RmsChangedEvent.cpp  RmsChangedEvent.h  Server.cpp  Server.h  SettingsRepo.cpp  SettingsRepo.h  Types.cpp  Types.h
scripts/: fix-repo.js
scripts/converter/: main  main.rs
scripts/parse/: parser.js  run.js
test/: blackwatch.RPP
test/song.band/Alternatives/000/: DisplayState.plist  DisplayStateArchive  MetaData.plist  ProjectData
test/song.band/Alternatives/000/Autosave/: 2024-08-17 23:15:59Z.displayData  2024-08-17 23:15:59Z.eventData  2024-08-17 23:15:59Z.songData
test/song.band/Resources/: ProjectInformation.plist
